--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-calendar": "^4.0.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
