--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^4.0.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -23,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
